--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
                          <button onclick="sine()"> sin </button>
 
+                         <button onclick="power_4()"> x^4</button>
+
                  </p>
 
                  <script type="text/javascript">
@@ -61,6 +63,14 @@
                                   var num = document.getElementById("n1");
 
                                   num.value = Math.sin(num.value);
+
+                         }
+
+                         function power_4() {
+
+                                  var num = document.getElementById("n1");
+
+                                  num.value = Math.pow(num.value, 4);
 
                          }
 
