--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
                          <button onclick="cube()"> x^3 </button>
 
+                         <button onclick="sine()"> sin </button>
+
                  </p>
 
                  <script type="text/javascript">
@@ -51,6 +53,14 @@
                                   var num = document.getElementById("n1");
 
                                   num.value = 1/num.value;
+
+                         }
+ 
+                         function sine() {
+
+                                  var num = document.getElementById("n1");
+
+                                  num.value = Math.sin(num.value);
 
                          }
 
