--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                          <button onclick="square()"> x^2 </button>
 
                          <button onclick="cube()"> x^3 </button>
-
                          <button onclick="sine()"> sin </button>
+                         <button onclick="power_4()"> x^4</button>
 
                          <button onclick="power_4()"> x^4</button>
 
@@ -63,6 +63,11 @@
                                   var num = document.getElementById("n1");
 
                                   num.value = Math.sin(num.value);
+                         function power_4() {
+
+                                  var num = document.getElementById("n1");
+
+                                  num.value = Math.pow(num.value, 4);
 
                          }
 
